<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRA</string>
    <string name="titulo_matricula">Calculo do CRA</string>
    <string name="label_matricula">Matricula:</string>
    <string name="hint_matricula">123456789</string>
    <string name="label_bt_matricula">Entrar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calculo">Calculo do CR</string>
    <string name="title_activity_materia">Incluir Materias</string>
    <string name="hello_world">Hello world!</string>
    <string name="materiaid_text">ID da Matéria</string>
    <string name="idvalue_text">valor do ID</string>
    <string name="add_string">Adicionar</string>
    <string name="carga_curso_label">Carga do Curso:</string>
    <string name="carga_curso">3240</string>
    <string name="carga_cumprida_label">Carga Cumprida:</string>
    <string name="cra_label">CRA:</string>
    <string name="add_materia">Add Materia</string>
    <string name="title_activity_nota">Informar Nota</string>
    <string name="salvar_nota">Salvar Nota</string>
    <string name="add_materia_info">Clique na materia para dar nota.</string>
    <string name="recalcular">Recalcular</string>
    
</resources>
